# flutter-sticker-maker

./: .gitignore  CHANGELOG.md  LICENSE  NATIVE_FFI_OPTIMIZATION.md  README.md  doc_enhance.md  ffigen.yaml  pubspec.yaml
.github/workflows/: publish.yml
android/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/src/cpp/: mask_processor.h  simd_optimizations.c  simd_optimizations.h
android/src/main/kotlin/com/asionbo/flutter_sticker_maker/: FlutterStickerMakerPlugin.kt
android/src/main/kotlin/com/yourdomain/flutter_sticker_maker/: FlutterStickerMakerPlugin.kt
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: flutter_sticker_maker_integration_test.dart  native_mask_performance_integration_test.dart
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/services/: permission_service.dart
ios/: Podfile  flutter_sticker_maker.podspec
ios/Classes/: FlutterStickerMakerPlugin.swift  StickerAnimateView.swift  VisualEffectView.swift  mask_processor.c
ios/Runner/: Info.plist
lib/: flutter_sticker_maker.dart  permissions_util.dart
lib/src/: constants.dart  exceptions.dart  lift_animation_widget.dart  native_mask_processor.dart  onnx_sticker_processor.dart  onnx_visual_effect_overlay.dart  pixel_image.dart  visual_effect_builder.dart
scripts/: check_elf_alignment.sh
src/native/: mask_processor.c
test/: flutter_sticker_maker_test.dart  lift_animation_widget_test.dart  native_mask_processor_test.dart  onnx_visual_effect_overlay_test.dart  performance_benchmark_test.dart  visual_effect_presenter_test.dart
